--- a/app/modules/shelves/scss/_shelf_editor.scss
+++ b/app/modules/shelves/scss/_shelf_editor.scss
@@ -18,7 +18,6 @@
     @include display-flex(column)
   }
   .buttons{
-    @include display-flex(row, center, space-around);
     margin-top: 2em;
     align-self: stretch;
   }
@@ -30,16 +29,38 @@
   }
   .delete{
     @include dangerous-action;
-    margin-right: 1em;
+  }
+  .validate{
+
   }
   /*Smaller screens*/
   @media screen and (max-width: $smaller-screen) {
     @include display-flex(column, center, center);
     .buttons{
-      @include display-flex(column, center, center);
-      .delete{
-        margin-bottom: 1em;
+      align-self: stretch;
+      flex: 1;
+      padding: 1em;
+      @include display-flex(column, stretch, center);
+      button{
+        min-width: 12em;
+        max-width: 20em;
+        margin: 0.5em auto;
       }
+    }
+    .inputBox{
+      padding: 0 0.5em;
+    }
+  }
+  /*Large screens*/
+  @media screen and (min-width: $small-screen) {
+    .buttons{
+      @include display-flex(row, center, space-around);
+    }
+    .delete{
+      margin-right: 0.5em;
+    }
+    .validate{
+      margin-left: 0.5em;
     }
   }
 }
